Project

General

Profile

Actions

Bug #9353

closed

fmt: this statement may fall through

Added by Toomas Soome over 5 years ago. Updated over 5 years ago.

Status:
Closed
Priority:
Normal
Assignee:
Category:
cmd - userland programs
Start date:
2018-03-26
Due date:
% Done:

100%

Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
External Bug:

Description

issue found by gcc 7 build:

    fmt.c:235:4: error: this statement may fall through [-Werror=implicit-fallthrough=]
        prefix(canonb);
        ^~~~~~~~~~~~~~
    fmt.c:236:3: note: here
       case not_in_hdr:
       ^~~~
    cc1: all warnings being treated as errors

Actions #1

Updated by Electric Monk over 5 years ago

  • Status changed from In Progress to Closed
  • % Done changed from 90 to 100

git commit 40ed00103f04f72bef88cdaa2ec4ebae03af4a07

commit  40ed00103f04f72bef88cdaa2ec4ebae03af4a07
Author: Toomas Soome <tsoome@me.com>
Date:   2018-04-23T16:15:39.000Z

    9353 fmt: this statement may fall through
    Reviewed by: C Fraire <cfraire@me.com>
    Reviewed by: Andy Fiddaman <omnios@citrus-it.co.uk>
    Approved by: Hans Rosenfeld <rosenfeld@grumpf.hope-2000.org>

Actions

Also available in: Atom PDF